--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "init-index-local": "node builder/init.js --local",
     "init-index-remote": "node builder/init.js --remote",
     "watch": "npm-run-all init-index-local watch:parcel",
-    "build": "npm-run-all init-index-remote build:parcel"
+    "build": "npm-run-all init-index-remote build:parcel",
+    "start": "live-server ./dist"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
     "happy-birthday",
     "birthday-card"
   ],
-  "author": "Anshuman Mahato",
+  "author": "Nikhil",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AnshumanMahato/Happy-Birthday-Card/issues"
@@ -34,6 +35,7 @@
     "@parcel/packager-raw-url": "^2.6.2",
     "@parcel/transformer-sass": "^2.6.2",
     "@parcel/transformer-webmanifest": "^2.6.2",
+    "live-server": "^1.2.2",
     "parcel": "^2.6.2",
     "sass": "^1.53.0"
   },
