--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   base = "./"
   publish = "./dist/"
-  command = "npm run build"
+  command = "npm run build:parcel"
 
 [template.environment]
-  NAME = "enter Name of the receiver"
-  PIC = "enter web url of the receiver's image"
+  NAME = "Jyoti"
+  PIC = ""
